--- a/public/enrichment/mart-visual-enrichment/app/partials/upload-filter.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/upload-filter.html
@@ -1,6 +1,6 @@
 <div>
     <div>
-        <h3>{{filter.displayName}}</h3>
+        <p class="lead">{{filter.displayName}}</p>
         <!-- <p>{{filter.description}}</p> -->
     </div>
     <textarea class="form-control mv-tarea"
