--- a/public/enrichment/mart-visual-enrichment/app/partials/boolean-filter.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/boolean-filter.html
@@ -1,5 +1,5 @@
 <div>
-    <h3>{{filter.displayName}}</h3>
+    <p class="lead">{{filter.displayName}}</p>
     <!--<p>{{filter.description}}</p>-->
     <input type="radio" ng-model="choice" ng-click="set('only')"> Yes
     <input type="radio" ng-model="choice" ng-click="set('excluded')"> No
