--- a/public/enrichment/mart-visual-enrichment/app/partials/single-select-boolean-filter.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/single-select-boolean-filter.html
@@ -1,6 +1,6 @@
 <div>
     <div>
-        <h3>{{filter.displayName}}</h3>
+        <p class="lead">{{filter.displayName}}</p>
         <!-- <p>{{filter.description}}</p> -->
     </div>
     <select class="form-control mve-select" ng-model="selected" ng-options="f.displayName for f in options" ng-change="onSelect(selected)">
