--- a/public/enrichment/mart-visual-enrichment/app/partials/boolean-filter.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/boolean-filter.html
@@ -1,6 +1,8 @@
 <div>
     <p class="lead">{{filter.displayName}}</p>
     <!--<p>{{filter.description}}</p>-->
-    <input type="radio" ng-model="choice" ng-click="set('only')"> Yes
-    <input type="radio" ng-model="choice" ng-click="set('excluded')"> No
+    <form>
+        <input type="radio" ng-model="choice" value="only" ng-click="set('only')"> Yes
+        <input type="radio" ng-model="choice" value="excluded" ng-click="set('excluded')"> No
+    </form>
 </div>
