--- a/public/enrichment/mart-visual-enrichment/app/partials/single-select-boolean-filter.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/single-select-boolean-filter.html
@@ -4,5 +4,6 @@
         <!-- <p>{{filter.description}}</p> -->
     </div>
     <select class="form-control mve-select" ng-model="selected" ng-options="f.displayName for f in options" ng-change="onSelect(selected)">
+        <option value="">----</option>
     </select>
 </div>
