single select boolean filter get state from url

--- a/public/enrichment/mart-visual-enrichment/app/partials/enrichment.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/enrichment.html
@@ -24,7 +24,7 @@
                     <tabset>
                         <tab active>
                             <tab-heading>
-                                <h3>List of Genes</h3>
+                                <h3>Gene List</h3>
                             </tab-heading>
                             <div mv-filter="{{enr.getFilter('sets')}}">
                             </div>
