--- a/public/enrichment/mart-visual-enrichment/app/partials/enrichment.html
+++ b/public/enrichment/mart-visual-enrichment/app/partials/enrichment.html
@@ -11,6 +11,7 @@
                     </select>
                 </div>
                 <div class="col-md-3"  ng-controller="QueryCtrl as ctrl">
+                    <button class="btn btn-default" ng-click="ctrl.clear()">Clear</button>
                     <button class="btn btn-default" ng-click="ctrl.showQuery()">Get XML Query</button>
                     <button class="btn btn-danger" ng-click="ctrl.submit()">Submit</button>
                 </div>
